<resources>
    <string name="app_name">NPTEL</string>
    <string name="share_app">Share App</string>
    <string name="settings">Settings</string>
    <string name="change_course">Change Course</string>
    <string name="play_store_link">https://play.google.com/store/apps/details?id=com.nptel.courses.online</string>
    <string name="play_store_dynamic_link">https://nptel.page.link/app</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="player_error">Error initializing YouTube player: %s</string>

    <string name="banner_ad_unit_id">ca-app-pub-3015402471091188/6587982909</string>
    <string name="test_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_id">ca-app-pub-3015402471091188~7056570974</string>

    <string name="aerospace_engineering">Aerospace Engineering</string>
    <string name="biotechnology">Biotechnology</string>
    <string name="chemical_engineering">Chemical Engineering</string>
    <string name="chemistry_and_biochemistry">Chemistry and Biochemistry</string>
    <string name="computer_science_and_engineering">Computer Science  \nand Engineering</string>
    <string name="electrical_engineering">Electrical Engineering</string>
    <string name="textile_engineering">Textile Engineering</string>
    <string name="physics">Physics</string>
    <string name="automobile_engineering">Automobile Engineering</string>
    <string name="mathematics">Mathematics</string>
    <string name="environmental_science">Environmental Science</string>
    <string name="metallurgy_and_material_science">Metallurgy and Material Science</string>
    <string name="mining_engineering">Mining Engineering</string>
    <string name="ocean_engineering">Ocean Engineering</string>
    <string name="atmospheric_science">Atmospheric Science</string>
    <string name="nanotechnology">Nanotechnology</string>
    <string name="management">Management</string>
    <string name="electronics_and_communication_engineering">Electronics and  \nCommunication Engineering</string>
    <string name="engineering_design">Engineering Design</string>
    <string name="civil_engineering">Civil Engineering</string>
    <string name="humanities_and_social_sciences">Humanities and Social Sciences</string>
    <string name="mechanical_engineering">Mechanical Engineering</string>
    <string name="basic_courses_sem_1_and_2">Basic courses(Sem 1 and 2)</string>
    <string name="general">General</string>
    <string name="thumbnail">thumbnail</string>
    <string name="course_image">Course Image</string>
    <string name="module_image">module thumbnail</string>
    <string name="video_thumbnail">video thumbnail</string>
    <string name="by">by </string>
    <string name="modules">Modules</string>
    <string name="all_courses">All Courses</string>
    <string name="about_nptel">Your favorite courses available for certification!\n
        Study, write an exam and get a certificate from the IITs! Check http://nptel.ac.in/noc\n\n
        This channel provides technical lectures from seven Indian Institutes of Technology (IITs)
        and Indian Institute of Science (IISc) Bangalore.</string>
    <string name="about_app">All videos from NPTEL YouTube channel at one place!</string>
    <string name="add_course">Start by adding a course</string>
    <string name="tap_here_to_explore">Tap Here to Explore Courses</string>
    <string name="plus">+</string>
    <string name="mark_favourite">mark favourite</string>
    <string name="add_to_playlist">add to playlist</string>
    <string name="share">share</string>
    <string name="favourite_list">Favourite List</string>
    <string name="playlists">Playlists</string>
    <string name="delete">delete</string>
    <string name="you_have_not_created_any_playlist">You have not created any playlist.</string>
    <string name="about_us">About</string>
    <string name="support_developer">Support Developer</string>
    <string name="logo">logo</string>
    <string name="app_name_full">NPTEL-Online Course Videos</string>
    <string name="app_version">App Version - 1.9</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="contact">Contact</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="no_video_in_this_playlist">No video in this playlist.</string>
    <string name="no_video_is_marked_fav">No video is marked as favourite.</string>
    <string name="loading_playlist">Loading playlist</string>
    <string name="no_playlist_found">No playlist found</string>
    <string name="no_video_available">No video available</string>
    <string name="loading_videos">Loading videos</string>
    <string name="video_not_found">Sorry, the video is not found</string>
    <string name="search">Search</string>
    <string name="this_app_requires_internet_connection_to_work_properly">This app requires internet connection to work properly.</string>
    <string name="please_wait">please wait</string>
    <string name="appreciate">Appreciate</string>
    <string name="no_video_found_try_different_search_query">No video found. Try different search query</string>

</resources>
