<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.AboutUsActivity">

    <ImageView
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:background="@mipmap/icon"
        android:contentDescription="@string/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_full" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version" />

    <TextView
        android:id="@+id/privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onClick"
        android:text="@string/privacy_policy" />

    <TextView
        android:id="@+id/terms_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/terms_conditions" />

    <TextView
        android:id="@+id/contact_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/contact" />

</LinearLayout>